--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "node": "v0.4.11"
   },
   "dependencies": {
-    "nko": "*"
+    "nko": "*",
+    "express": "2.4.6",
+    "ejs": "0.4.3"
   },
   "devDependencies": {}
 }
