--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "nko": "*",
     "express": "2.4.6",
-    "ejs": "0.4.3"
+    "ejs": "0.4.3",
+    "mongoose": "2.0.1"
   },
   "devDependencies": {}
 }
