--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nko": "*",
     "express": "2.4.6",
     "ejs": "0.4.3",
-    "mongoose": "2.0.1"
+    "mongoose": "2.0.1",
+    "underscore": "1.1.7"
   },
   "devDependencies": {}
 }
